[gd_scene format=3 uid="uid://e48dqeu0e685"]

[ext_resource type="Script" uid="uid://cchb2sld3lagp" path="res://World/funnel.gd" id="1_rx85m"]
[ext_resource type="Texture2D" uid="uid://535k4aqgk8bx" path="res://assets/New/funnel.png" id="2_rx85m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8job"]
size = Vector2(134.92189, 130.10553)

[node name="Funnel" type="Node2D" unique_id=1866035615]
script = ExtResource("1_rx85m")

[node name="Area2D" type="Area2D" parent="." unique_id=1823916137]

[node name="FunnelSprite" type="Sprite2D" parent="Area2D" unique_id=169934463]
position = Vector2(0, 30.855)
scale = Vector2(0.07, 0.07)
texture = ExtResource("2_rx85m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1402715319]
shape = SubResource("RectangleShape2D_j8job")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
